[metadata]
name = simple_progress_bar
version = 0.1.2
author = Marcelo Landim
author_email = marcelolandim85@gmail.com
description = Simple progress bar util for console apps in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mLandim/simple_progress_bar
project_urls =
    Issues = https://github.com/mLandim/simple_progress_bar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

